# urunan

./: Cargo.toml  LICENSE  README.md  dfx.json  package-lock.json  package.json
scripts/: did.sh
src/urunan_backend/: Cargo.toml  urunan_backend.did
src/urunan_backend/src/: lib.rs
src/urunan_backend/src/core/: api.rs  constants.rs  mod.rs  runtime.rs  stable_memory.rs  types.rs  utils.rs
src/urunan_backend/src/http/: outbound.rs
src/urunan_backend/src/main_module/: api.rs  mod.rs  service.rs  types.rs
src/urunan_backend/src/split_bill/: api.rs  service.rs  types.rs
src/urunan_frontend/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.js
src/urunan_frontend/src/: App.jsx  App.tsx  index.css  utils.ts
src/urunan_frontend/src/components/: home.tsx  login.tsx  notFound.tsx  privateRoute.tsx
src/urunan_frontend/src/components/home/: home.tsx  newExpense.tsx
src/urunan_frontend/src/components/widgets/: avatar.tsx  checkbox.tsx  dropDown.tsx  dropDownForm.tsx  modal.tsx
src/urunan_frontend/src/context/: AppState.ts  index.ts
src/urunan_frontend/src/hooks/: useActor.ts  useAuth.ts  useLocalStorage.ts  useUser.ts
src/urunan_frontend/src/model/: mapper.ts  schema.ts  views.ts
src/urunan_frontend/src/utils/: index.ts  views.tsx
