[package]
name = "urunan_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ciborium = "0.2.2"
ic-cdk = "0.13"
ic-cdk-macros = "0.13.2"
ic-cdk-timers = "0.7"          # Feel free to remove this dependency if you don't need timers
ic-ledger-types = "0.10.0"
ic-stable-structures = "0.6.3"
serde = "1.0.198"
serde_bytes = "0.11.14"
serde_json = "1.0.116"

# [dependencies.uuid]
# version = "1.8.0"
# features = [
#     "v4",                # Lets you generate random UUIDs
#     "v7",
#     "fast-rng",          # Use a faster (but still sufficiently random) RNG
#     "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
# ]
